[package]
name = "sane-scan"
version = "0.1.2"
edition = "2018"
license = "MIT"
authors = ["aQaTL <mmsoltys@outlook.com>"]
description = "Bindings and safe wrapper for SANE"
repository = "https://github.com/aQaTL/sane-scan"
keywords = ["scanner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
bitflags = "2.5.0"

[build-dependencies]
bindgen = "0.69.4"
convert_case = "0.6.0"
